# solagent-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/solagent/: __init__.py  server.py
src/solagent/tools/: market_tools.py  swap.py  transfer.py  wallet.py
src/solagent/utils/: jupiter.py  market.py  solana_client.py
