[project]
name = "solagent-mcp"
version = "0.1.0"
description = "Solana MCP server — wallet, swaps, transfers, market data for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "solana", "jupiter", "defi", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "solders>=0.21.0",
    "base58>=2.1.0",
]

[project.scripts]
solagent = "solagent.server:main"

[project.urls]
Repository = "https://github.com/anthropic-solagent/solagent-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solagent"]
